--- a/4_analyses.Rmd
+++ b/4_analyses.Rmd
@@ -144,12 +144,12 @@ alldata_birthorder = alldata_birthorder %>%
 ### Maternal birth order {.tabset}
 
 ```{r}
-g_factor_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink), data = alldata_birthorder %>% 
-  rename(sibling_count = sibling_count_uterus_alive_factor,
-         birth_order_nonlinear = birthorder_uterus_alive_factor,
-         birth_order = birthorder_uterus_alive,
-         count_birth_order = count_birthorder_uterus_alive
-         ))
+g_factor_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mother_pidlink),
+                   data = alldata_birthorder %>%
+                     rename(sibling_count = sibling_count_uterus_alive_factor,
+                            birth_order_nonlinear = birthorder_uterus_alive_factor,
+                            birth_order = birthorder_uterus_alive,
+                            count_birth_order = count_birthorder_uterus_alive))
 compare_models_markdown(g_factor_m1)
 ```
 
@@ -165,3 +165,15 @@ g_factor_preg_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | mothe
 compare_models_markdown(g_factor_preg_m1)
 ```
 
+### Parental Full Silbing Order {.tabset}
+
+```{r}
+g_factor_parental_m1 = lmer(g_factor ~ birthyear + male + sibling_count + (1 | marriage_id),
+                            data = alldata_birthorder %>% 
+  rename(sibling_count = sibling_count_genes_factor,
+         birth_order_nonlinear = birthorder_genes_factor,
+         birth_order = birthorder_genes,
+         count_birth_order = count_birthorder_genes
+         ))
+compare_models_markdown(g_factor_parental_m1)
+```
