--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -1,71 +1,13 @@
-# Data preparation {.tabset}
-
-## Library
-```{r Library}
-library(formr)
-library(rmarkdown)
-library(formatR)
-library(devtools)
-library(haven)
-library(tidyr)
-library(ggplot2)
-library(stringr)
-library(GPArotation)
-library(lubridate)
-library(psych)
-library(lavaan)
-library(Hmisc)
-library(dplyr)
-```
+# Data Preparation {.tabset}
 
 ## Helper
 ```{r helper}
-
-pad_month = function(x) { str_pad(x, width = 2, side = "left", pad = "0")}
-
-### Function to calculate the birthdate out of all available informations for one individual
-all_available_info_birth_date = function(byear, bmonth, bday = NULL) {
-  if(!is.null(bday)) {
-    bday = paste0("-", bday)
-  } else {
-    bday = ""
-  }
-  ifelse(is.na(byear), NA,
-         paste0(byear, "-", bmonth, bday))
-  # can yield 2016-NA-NA
-  #           2016-01-NA
-  #           2016-01-01
-  #           2016-01
-}
-
-##### Function to calculate the birthorder based on the siblings still alive at the time of birth
-older_sibs_alive_and_dependent = function(byear, dyear) {
-	sibs = length(byear)
-	older_sibs_alive_and_dependent = integer(length=sibs) + 1
-	for(i in 1:sibs) {
-		older_sibs = byear <= byear[i] # not using < because of twins
-		older_sibs[i] = F # minus self
-		my_sibs = sum(older_sibs,na.rm = T) # minus self
-		if(my_sibs > 0) {
-			sib_births = byear[ which(older_sibs) ]
-			sib_deaths = dyear[ which(older_sibs) ]
-			my_sibs = my_sibs -
-				sum(
-					# sib_births < (byear[i] - 5) | # others born more than 5y earlier than me  # 10 seconds of 17
-						(sib_deaths <= byear[i]) # died before my birth
-				,na.rm=T)
-			older_sibs_alive_and_dependent[i] = my_sibs
-		}
-	}
-	older_sibs_alive_and_dependent
-}
-
+source("0_helpers.R")
 ```
 
 
-
-## Load data
-```{r Load data}
+## Import Data
+```{r Import data}
 ### Informations about individuals living in the household in 2014/2015
 ## All Individuals living in the household
 bk_ar1 = read_dta("data/hh14_all_dta/bk_ar1.dta") # Book K, Section ar
@@ -127,7 +69,7 @@ b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta") # Book 3b, Section si
 ```
 
 
-## Pregnancy informations
+## Pregnancy Informations
 ```{r}
 ## Select data
 w5_pregnancy = w5_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
