--- a/1_data_import.Rmd
+++ b/1_data_import.Rmd
@@ -1,4 +1,4 @@
-# Data Preparation {.tabset}
+# Data Import and Preparation {.tabset}
 
 ## Helper
 ```{r helper}
@@ -7,6 +7,8 @@ source("0_helpers.R")
 
 
 ## Import Data
+
+All data is retrieved from the RAND Corporation http://www.rand.org/labor/FLS/IFLS.html
 ```{r Import data}
 ### Informations about individuals living in the household in 2014/2015
 ## All Individuals living in the household
@@ -68,8 +70,8 @@ b3a_si = read_dta("data/hh14_all_dta/b3a_si.dta") # Book 3b, Section si
 
 ```
 
-
-## Pregnancy Informations
+## Birth Order Information {.tabset}
+### Information about Pregnancy
 ```{r}
 ## Select data
 w5_pregnancy = w5_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
@@ -79,16 +81,14 @@ w2_pregnancy = w2_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch
 w1_pregnancy = w1_pregnancy %>% select(pidlink, ch06, ch08, ch09day, ch09mth, ch09yr, ch25)
 # In the first wave the year is named wrong
 w1_pregnancy = w1_pregnancy %>%
-  filter(ch09yr <=93)
+  mutate(ch09yr = ifelse(ch09yr <= 93, ch09yr, NA))
 w1_pregnancy$ch09yr = as.numeric(str_c("19", w1_pregnancy$ch09yr))
 
 ## Combine data
 pregnancy = bind_rows(w1_pregnancy, w2_pregnancy, w3_pregnancy, w4_pregnancy, w5_pregnancy)
-length(unique(pregnancy$pidlink))
 
 ## Rename Variables
 pregnancy = pregnancy %>% rename(lifebirths = ch06, gender = ch08, birth_day = ch09day, birth_month = ch09mth, birth_year = ch09yr, mother_pidlink = pidlink, alive = ch25) # pregnancy$lifebirths values: 1 = still pregnant, 2 = livebirth, 3 = still birth, 4 = misscarriage
-n_missing(pregnancy$mother_pidlink)
 
 ## Set values as NA that are missing
 pregnancy$birth_day[ pregnancy$birth_day>31] = NA
@@ -98,6 +98,8 @@ pregnancy$birth_day[ is.nan(pregnancy$birth_day) ] = NA
 pregnancy$birth_month[ is.nan(pregnancy$birth_month) ] = NA
 pregnancy$birth_year[ is.nan(pregnancy$birth_year)] = NA
 
+pregnancy$month = paste0(pregnancy$birth_year,"-", ifelse(is.na(pregnancy$birth_month), "01",
+                                                          pad_month(pregnancy$birth_month)))
 
 pregnancy = pregnancy %>%
   mutate(birthdate = all_available_info_birth_date(birth_year, birth_month, birth_day),
@@ -107,79 +109,32 @@ pregnancy = pregnancy %>%
 pregnancy = pregnancy %>%
   filter(!is.na(birthdate))
 
-pregnancy_alive = pregnancy %>%
-  filter(lifebirths ==2)
-
-### Remove all families with multiple births:
+### Remove all families with multiple births for pregnancy order:
 ## Mark multpile births
 pregnancy = pregnancy %>%
-  mutate(multiple_birth = ifelse(duplicated(mother_birthdate), 1, 0))
+  mutate(multiple_birth_preg = ifelse(duplicated(mother_birthdate), 1, 0))
 ## All women that ever had multiple births
-twinmothers = pregnancy %>%
-  filter(multiple_birth == 1)
-length(unique(twinmothers$mother_pidlink)) ## number of families that have to be excluded due to multiple births
-
+twinmothers_preg = pregnancy %>%
+  filter(multiple_birth_preg == 1)
+## Mark individuals with multiple births in family
 pregnancy = pregnancy %>%
-    filter(!(mother_pidlink %in% twinmothers$mother_pidlink))
+  mutate(multiple_birth_in_family_preg = ifelse((mother_pidlink %in% twinmothers_preg$mother_pidlink), 1, 0))
 
 
-### Remove all families with multiple births:
+### Remove all families with multiple births for birth order:
 ## Mark multpile births
-pregnancy_alive = pregnancy_alive %>%
-  mutate(multiple_birth = ifelse(duplicated(mother_birthdate), 1, 0))
+pregnancy_alive = pregnancy %>%
+  filter(lifebirths == 2) %>%
+  mutate(multiple_birth_alive = ifelse(duplicated(mother_birthdate), 1, 0))
 ## All women that ever had multiple births
 twinmothers_alive = pregnancy_alive %>%
-  filter(multiple_birth == 1)
-length(unique(twinmothers_alive$mother_pidlink)) ## number of families that have to be excluded due to multiple births
-
-pregnancy_alive = pregnancy_alive %>%
-    filter(!(mother_pidlink %in% twinmothers$mother_pidlink))
+  filter(multiple_birth_alive == 1)
+## Mark individuals with multiple births in family
+pregnancy = pregnancy %>%
+  mutate(multiple_birth_in_family_alive = ifelse((mother_pidlink %in% twinmothers_alive$mother_pidlink), 1, 0))
 ```
 
-
-## Uterus Birthorder and maternal sibling count
-```{r Uterus birthorder and maternal sibling count}
-### Birthorder calculations
-## Biological Uterus Birthorder calculations with all pregnancies:
-pregnancy1 = pregnancy %>%
-  group_by(mother_pidlink) %>%
-  mutate(birthorder_uterus_preg = min_rank(birthdate),
-         sibling_count_uterus_preg = sum(!is.na(birthdate)))
-
-## Biological Uterus Birthorder calculations with all births:
-pregnancy2 = pregnancy %>%
-  filter(lifebirths == 2) %>%
-  group_by(mother_pidlink) %>%
-    mutate(birthorder_uterus_alive = min_rank(birthdate),
-           sibling_count_uterus_alive = sum(!is.na(birthdate))) %>%
-  ungroup()
-
-pregnancy2 = pregnancy2 %>% select(mother_birthdate, birthorder_uterus_alive, sibling_count_uterus_alive)
-
-### 3040 individuals are removed because of death before/during birth
-
-### Combine birthorder data
-pregnancy = left_join(pregnancy1, pregnancy2, by="mother_birthdate")
-pregnancy$month = paste0(pregnancy$birth_year,"-", ifelse(is.na(pregnancy$birth_month), "01", pad_month(pregnancy$birth_month)))
-n_missing(pregnancy$mother_pidlink)
-
-### Graphs
-## Biological Birthorder - Uterus_Pregnancies
-qplot(pregnancy$birthorder_uterus_preg)
-ggplot(pregnancy, aes(x=sibling_count_uterus_preg, y=birthorder_uterus_preg)) + geom_jitter()
-
-## Biological Birthorder - Uterus_Births
-qplot(pregnancy$birthorder_uterus_alive)
-ggplot(pregnancy, aes(x=sibling_count_uterus_alive, y=birthorder_uterus_alive)) + geom_jitter()
-
-## Bio: Uterus_preg vs. Uterus_Births
-ggplot(pregnancy, aes(x=birthorder_uterus_preg, y=birthorder_uterus_alive)) + geom_jitter()
-# The birth_order_alive is always lower, which makes sense, becaus not live births (miscarriage, still births are excluded)
-
-
-```
-
-## Marriage History
+### Information about Marriage History
 ```{r marriage history}
 ## Select marriage data
 w5_marriage = w5_marriage %>% select(pidlink, kw10mth, kw10yr, kw18mth, kw18yr, kw11, kw19)
@@ -273,8 +228,6 @@ marriage = marriage %>%
 # marriage$start_string[!is.na(marriage$start_string) & is.na(marriage$start) ]
 # marriage$end_string[!is.na(marriage$end_string) & is.na(marriage$end) ]
 # 
-qplot(marriage$start)
-qplot(marriage$end)
 
 ## Count number of marriages
 marriage = marriage %>%
@@ -286,18 +239,6 @@ marriage = marriage %>%
                               as.character(start), "/",as.character(end)))
 
 dupes = unique(marriage$marriage_id[duplicated(marriage$marriage_id)])
-
-
-## Graphic analysis
-marriage %>% ggplot(aes(number_marriages, order_marriage)) + geom_jitter(width=0.1)
-
-## Problem: What do i do with still ongoing marriages? How do i deal with marriages with missing end, but ther are other marriages afterwards (can i use that start date as end date? and if yes --> how?!?)
-
-table(is.na(marriage$start))
-table(is.na(marriage$end))
-
-
-
 
 ### Marriage Timeline
 minimum_start = min(ymd(str_c(pregnancy$month, "-01")), na.rm = T)
@@ -326,37 +267,100 @@ marriage_timeline = marriage_timeline %>%
 
 marriage_timeline$month = stringr::str_sub(as.character(marriage_timeline$month),1,7)
 
-# How many IDs from the pregnancy file match the marriage file?
-length(intersect(pregnancy$mother_pidlink, marriage_timeline$mother_pidlink))
-
 pregnancy = pregnancy %>% left_join(marriage_timeline, by = c("mother_pidlink", "month"))
 
 # rm(marriage_timeline)
+
+### Remove all families with multiple births for birth order:
+## Mark multpile births
+pregnancy = pregnancy %>%
+  mutate(marriage_id_birthdate = str_c(marriage_id, "-", birthdate),
+    multiple_birth_full = ifelse(duplicated(marriage_id_birthdate), 1, 0),
+    multiple_birth_full = ifelse(is.na(marriage_id), NA, multiple_birth_full))
+## All women that ever had multiple births
+twinmothers_full = pregnancy %>%
+  filter(multiple_birth_full == 1)
+## Mark individuals with multiple births in family
+pregnancy = pregnancy %>%
+  mutate(multiple_birth_in_family_full = ifelse((mother_pidlink %in% twinmothers_full$mother_pidlink), 1, 0))
 ```
 
 
-## Gene birthorder (based on both parents)
+### Maternal Birth and Pregnancy Order
+```{r Uterus birthorder and maternal sibling count}
+### Birthorder calculations
+## Biological Uterus Birthorder calculations with all pregnancies:
+pregnancy1 = pregnancy %>%
+  group_by(mother_pidlink) %>%
+  mutate(birthorder_uterus_preg = min_rank(birthdate),
+         birthorder_uterus_preg = ifelse(is.na(mother_pidlink), NA, birthorder_uterus_preg),
+         birthorder_uterus_preg = ifelse(multiple_birth_in_family_preg == 1, NA, birthorder_uterus_preg),
+         sibling_count_uterus_preg = sum(!is.na(birthdate)),
+         sibling_count_uterus_preg = ifelse(is.na(mother_pidlink), NA, sibling_count_uterus_preg),
+         sibling_count_uterus_preg = ifelse(multiple_birth_in_family_preg == 1, NA, sibling_count_uterus_preg)) %>%
+  ungroup()
+
+## Biological Uterus Birthorder calculations with all births:
+pregnancy2 = pregnancy %>%
+  filter(lifebirths == 2) %>%
+  group_by(mother_pidlink) %>%
+    mutate(birthorder_uterus_alive = min_rank(birthdate),
+           birthorder_uterus_alive = ifelse(is.na(mother_pidlink), NA, birthorder_uterus_alive),
+           birthorder_uterus_alive = ifelse(multiple_birth_in_family_alive == 1, NA, birthorder_uterus_alive),
+           sibling_count_uterus_alive = sum(!is.na(birthdate)),
+           sibling_count_uterus_alive = ifelse(is.na(mother_pidlink), NA, sibling_count_uterus_alive),
+           sibling_count_uterus_alive = ifelse(multiple_birth_in_family_alive == 1, NA, sibling_count_uterus_alive)) %>%
+  ungroup()
+
+pregnancy2 = pregnancy2 %>% select(mother_birthdate, birthorder_uterus_alive, sibling_count_uterus_alive)
+
+### Combine birthorder data
+pregnancy = left_join(pregnancy1, pregnancy2, by="mother_birthdate")
+pregnancy$month = paste0(pregnancy$birth_year,"-", ifelse(is.na(pregnancy$birth_month), "01",
+                                                          pad_month(pregnancy$birth_month)))
+
+```
+
+### Full Sibling Birth Order
 ```{r gene birthorder}
 ### Gene birthorder is calculated by grouping individuals together, for whom we know both the mother and her marriage history and making a rank list
-pregnancy_save = pregnancy
-
 pregnancy = pregnancy %>%
   group_by(marriage_id) %>%
     mutate(birthorder_genes = min_rank(birthdate),
            birthorder_genes = ifelse(is.na(marriage_id), NA, birthorder_genes),
-           sibling_count_genes = ifelse(is.na(marriage_id), NA, sum(!is.na(marriage_id))))
-
-pregnancy = pregnancy %>% filter(!is.na(birthorder_uterus_preg))
-
-ggplot(pregnancy, aes(x=sibling_count_genes, y=birthorder_genes)) + geom_jitter()
-
-## Plot uterus birth order vs. gene birthorder
-ggplot(pregnancy, aes(x=birthorder_uterus_alive, y=birthorder_genes)) + geom_jitter()
+           birthorder_genes = ifelse(multiple_birth_in_family_full == 1, NA, birthorder_genes),
+           sibling_count_genes = ifelse(is.na(marriage_id), NA, sum(!is.na(marriage_id))),
+           sibling_count_genes = ifelse(multiple_birth_in_family_full == 1, NA, sibling_count_genes))
 
 ```
 
+### Birth Order Graphs
+```{r}
+### Graphs
+## Biological Birthorder - Uterus_Pregnancies
+ggplot(pregnancy, aes(x=sibling_count_uterus_preg, y=birthorder_uterus_preg)) + geom_jitter()
 
-## Select individual data
+## Biological Birthorder - Uterus_Births
+ggplot(pregnancy, aes(x=sibling_count_uterus_alive, y=birthorder_uterus_alive)) + geom_jitter()
+
+## Biological Birthorder - Full Sibling Order
+ggplot(pregnancy, aes(x=sibling_count_genes, y=birthorder_genes)) + geom_jitter()
+
+## Bio: Uterus_preg vs. Uterus_Births
+ggplot(pregnancy, aes(x=birthorder_uterus_preg, y=birthorder_uterus_alive)) + geom_jitter()
+# The birth_order_alive is always lower, which makes sense, becaus not live births (miscarriage, still births are excluded)
+
+## Bio: Uterus_preg vs. Genes
+ggplot(pregnancy, aes(x=birthorder_uterus_preg, y=birthorder_genes)) + geom_jitter()
+# The birth_order_alive is always lower, which makes sense, becaus not live births (miscarriage, still births are excluded)
+
+## Bio: Uterus_alive vs. Genes
+ggplot(pregnancy, aes(x=birthorder_uterus_alive, y=birthorder_genes)) + geom_jitter()
+# The birth_order_alive is always lower, which makes sense, becaus not live births (miscarriage, still births are excluded)
+
+```
+
+## Select Individual Data from IFLS 5
 ```{r select individual data}
 ### Individuals
 individuals = bk_ar1 %>% select(hhid14_9, pidlink, father_pidlink, mother_pidlink, ar01a, ar02b, ar10, ar11, ar07, ar08day, ar08mth, ar08yr, ar09, ar18eyr, ar18emth)
@@ -407,18 +411,12 @@ length(unique(twinmothers_individual$mother_pidlink)) # number of families that 
 individuals = individuals %>%
     filter(!(mother_pidlink %in% twinmothers_individual$mother_pidlink))
 
-```
-
-
-
-## Combine informations from pregnancy file and individual file
-```{r Combine informations from pregnancy file and individual file}
-## Combine informations from pregnancy history and individual files
+## Combine information from pregnancy history and individual files
 alldata_pregnancy = left_join(pregnancy, individuals, by = "mother_birthdate")
 ```
 
 
-## Select IQ data
+## Intelligence {.tabset}
 ```{r select IQ data}
 ### IQ Informations
 ##ek2 (>14yrs)
@@ -488,9 +486,8 @@ formr::missingness_patterns(iq %>% select(raven, math, count_backwards, words_im
 
 ```
 
-## compute g factor
+### g-factor
 ```{r}
-
 iq$words_delayed = iq$words_delayed/10
 iq$words_immediate = iq$words_immediate/10
 iq$adaptive_numbering = iq$adaptive_numbering/100
@@ -501,9 +498,6 @@ fa(iq %>% select(raven, math, count_backwards, words_delayed, adaptive_numbering
 om_results = omega(iq %>% select(raven, math, count_backwards, words_delayed, adaptive_numbering) %>% data.frame(), nfactors = 1, sl = F)
 om_results
 omega.diagram(om_results)
-```
-
-````{r gfactor additional}
 
 "g_factor =~ raven + math + count_backwards +  words_delayed+ adaptive_numbering" %>%
   cfa(missing = "fiml", data = iq, std.lv = T, std.ov = T) -> cfa_g
@@ -521,7 +515,8 @@ formr::missingness_patterns(iq %>% select(raven, math, count_backwards, words_im
 ```
 
 
-## Select personality data
+
+## Personality
 ```{r select pesonality data}
 ### Personality
 ##Rearrange personality data so that every individual has only one row
@@ -565,7 +560,7 @@ qplot(pers$big5_agree)
 ```
 
 
-## Select risk taking data
+## Risk Preference
 ```{r select risk taking data}
 ###Risktaking
 risk = b3a_si %>% select(hhid14_9, pidlink, random_si, si01, si02, si03, si04, si05, si11, si12, si13, si14, si15)
@@ -631,101 +626,6 @@ formr::missingness_patterns(alldata_birthorder %>% select(big5_ext, big5_con, bi
 ##Risk
 formr::missingness_patterns(alldata_birthorder %>% select(riskA, riskB))
 ```
-
-
-## Exploring data
-
-``` {r exploring data}
-### Personality
-ggplot(alldata, aes(x=big5_agree, y=big5_neu)) + geom_jitter()
-
-###Openness and Intelligence
-round(cor(alldata %>% ungroup %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, g_factor, big5_open), use = "pairwise.complete.obs"), 2)
-
-###Other personality factors and Intelligence
-round(cor(alldata %>% ungroup %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, g_factor, big5_con), use = "pairwise.complete.obs"), 2)
-round(cor(alldata %>% ungroup %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, g_factor, big5_ext), use = "pairwise.complete.obs"), 2)
-round(cor(alldata %>% ungroup %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, g_factor, big5_agree), use = "pairwise.complete.obs"), 2)
-round(cor(alldata %>% ungroup %>% select(raven, math, count_backwards, words_immediate, words_delayed, adaptive_numbering, g_factor, big5_neu), use = "pairwise.complete.obs"), 2)
-# Opennes has the highest values!
-ggplot(alldata, aes(x=big5_open, y=g_factor)) + geom_jitter() + geom_smooth(method=lm) 
-
-### Birth Order
-alldata_birthorder %>%
-  filter(birthorder_uterus_alive<6) %>%
-  ggplot(aes(x=birthorder_uterus_alive, y=g_factor)) + geom_jitter() + geom_smooth(method=lm) 
-
-table(alldata_birthorder$sibling_count_uterus_alive)
-
-alldata_birthorder %>%
-  filter(birthorder_uterus_alive<8) %>%
-  filter(sibling_count_uterus_alive<8) %>%
-  ggplot(aes(x=birthorder_uterus_alive, y=g_factor)) + 
-  facet_wrap(~ sibling_count_uterus_alive) + 
-  geom_jitter() + geom_smooth(method=lm) 
-
-alldata_birthorder %>% select(birthorder_uterus_alive, sibling_count_uterus_alive, birthdate) -> subs
-alldata_birthorder$byear = as.numeric(stringr::str_sub(alldata_birthorder$birthdate,1,4))
-
-alldata_birthorder %>%
-  filter(birthorder_uterus_alive < 8) %>%
-  filter(sibling_count_uterus_alive < 8) %>%
-   mutate(birthorder_uterus_alive = factor(birthorder_uterus_alive, levels = c("1","2","3","4","5","6", "7", "8")),
-         sibling_count_uters_alive = factor(sibling_count_uterus_alive)) %>%
-  ggplot(aes(x=birthorder_uterus_alive, y=g_factor, colour = sibling_count_uterus_alive, group = sibling_count_uterus_alive)) + 
-  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
-  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
-
-alldata_birthorder %>%
-  filter(birthorder_uterus_alive < 8) %>%
-  filter(sibling_count_uterus_alive < 8) %>%
-   mutate(birthorder_uterus_alive = factor(birthorder_uterus_alive,levels = c("1","2","3","4","5","6", "7", "8")),
-         sibling_count_uters_alive = sibling_count_uterus_alive) %>%
-  ggplot(aes(x=birthorder_uterus_alive, y=big5_open, colour = sibling_count_uterus_alive, group = sibling_count_uterus_alive)) + 
-  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
-  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
-
-alldata_birthorder %>%
-  filter(birthorder_uterus_alive < 8) %>%
-  filter(sibling_count_uterus_alive < 8) %>%
-   mutate(birthorder_uterus_alive = factor(birthorder_uterus_alive, levels = c("1","2","3","4","5","6", "7", "8")),
-         sibling_count_uters_alive = sibling_count_uterus_alive) %>%
-  ggplot(aes(x=birthorder_uterus_alive, y=big5_ext, colour = sibling_count_uterus_alive, group = sibling_count_uterus_alive)) + 
-  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
-  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
-
-
-### Genes:
-alldata_birthorder %>%
-  filter(birthorder_genes < 8) %>%
-  filter(sibling_count_genes < 8) %>%
-   mutate(birthorder_genes = factor(birthorder_genes),
-         sibling_count_genes = sibling_count_genes) %>%
-  ggplot(aes(x=birthorder_genes, y=g_factor, colour = sibling_count_genes, group = sibling_count_genes)) + 
-  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
-  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
-
-
-alldata_birthorder %>%
-  filter(birthorder_genes < 8) %>%
-  filter(sibling_count_genes < 8) %>%
-   mutate(birthorder_genes = factor(birthorder_genes),
-         sibling_count_genes = sibling_count_genes) %>%
-  ggplot(aes(x=birthorder_genes, y=big5_open, colour = sibling_count_genes, group = sibling_count_genes)) + 
-  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
-  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
-
-alldata_birthorder %>%
-  filter(birthorder_uterus_alive < 8) %>%
-  filter(sibling_count_uterus_alive < 8) %>%
-   mutate(birthorder_uterus_alive = factor(birthorder_uterus_alive, levels = 1:7),
-         sibling_count_uters_alive = factor(sibling_count_uterus_alive, levels = 1:7)) %>%
-  ggplot(aes(x=birthorder_uterus_alive, y=big5_ext, colour = sibling_count_uterus_alive, group = sibling_count_uterus_alive)) + 
-  geom_pointrange(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4)) + 
-  geom_line(fun.data = "mean_cl_boot", stat = "summary", position = position_dodge(width = 0.4))
-
-```
-
 
 ## Save data
 
